# SimuDraco

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.py
SimuDracoPython.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/: global.h  kv.h  module.cpp  module.h
source/general/: color.cpp  color.h  registry.cpp  registry.h  registry_creates.cpp  registry_creates.h  registry_deleters.cpp  registry_deleters.h  registry_getters.cpp  registry_getters.h  registry_setters.cpp  registry_setters.h  structures.cpp  structures.h
source/gui/: gui_layer.cpp  gui_layer.h
source/module/: module.cpp  module.h
source/opengl_wrappers/: index_buffer.cpp  index_buffer.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
source/python_layer/: python_layer.cpp  python_layer.h
source/window/: window.cpp  window.h
